--- a/index.html
+++ b/index.html
@@ -58,19 +58,38 @@
     </div>
   </section>
 
-  <section id="accommodations" class="section">
-    <div class="container">
-      <br><br>
-      <h2>Hoteles</h2>
-      <p>Hay varios hoteles cerca de la casa rural:</p>
-      <ul>
-        <li><strong><a href="https://www.hotel-bb.com/es/hotel/madrid-arganda">B&B Hotel Madrid Arganda</a></strong></li>
-        <li><strong><a href="https://www.sercotelhoteles.com/es/hotel-ab-arganda">Sercotel Arganda</a></strong></li>
-        <li><strong><a href="https://hotel-mirador.net/">Hotel Mirador</a></strong></li>
-      </ul>
-      <p>Como solo estamos a media hora de Madrid, se aconseja disfrutar de la capital también.</p>
-    </div>
-  </section>
+<section id="accommodations" class="section">
+  <div class="container">
+    <br><br>
+    <h2>Dónde alojarse</h2>
+    <p>Hay varios hoteles cerca del lugar:</p>
+    <ul> 
+      <h1>En Tielmes</h1>
+      <li><strong><a href="https://lagardenemesio.es/hotel/">El Lagar de Nemesio</a></strong></li> 
+      <p>Un hotel pequeño y encantador a solo 10 minutos en coche del lugar. El espacio es limitado.</p>        
+
+      <h1>En Arganda del Rey</h1>
+      <p>Si deseas llegar en transporte público a Arganda del Rey, te recomendamos estos:</p>
+      <li><strong><a href="https://www.hotel-bb.com/en/hotel/madrid-arganda">B&B Hotel Madrid Arganda</a></strong></li><br>         
+      <li><strong><a href="https://www.sercotelhoteles.com/en/hotel-ab-arganda">Sercotel Arganda</a></strong></li><br>
+
+      <h1>En Chinchón</h1>
+      <p>Si estás pensando en alquilar un coche y prefieres una experiencia de pueblo, te recomendamos alojarte en Chinchón. Está constantemente considerado uno de los pueblos más bonitos de España.</p> 
+      <li><strong><a href="https://paradores.es/en/parador-de-chinchon">Parador de Chinchón</a></strong></li>
+      <p>Ubicado en un antiguo monasterio, los Paradores son de los hoteles más bonitos que encontrarás en toda España.</p>
+      <li><strong><a href="http://www.condesadechinchon.com/en/">Hotel Condesa de Chinchón</a></strong></li>
+      <p>Si no te apetece lo monástico, prueba la Condessa.</p>
+     
+      <h1>Opciones económicas</h1>
+      <p>Aunque aún pueda ser necesario un coche</p>
+      <li><strong><a href="https://hotel-mirador.net/">Hotel Mirador</a></strong></li><br>
+      <li><strong><a href="https://hotellaquintadesantillan.top">Hotel La Quinta de Santillán</a></strong></li>
+    </ul>
+    <h1>Madrid</h1>
+    <p>¡Madrid está a solo media hora en coche!</p>
+    <p>¿Entonces por qué no conocer la ciudad? Explora la Plaza Mayor, el Rastro o disfruta del arte en el Prado y el Thyssen. Ve un poco de flamenco, come en el Mercado de San Miguel y vive la vida castiza. Madrid es la maravillosa ciudad donde Austin y Paula se conocieron por primera vez tomando copas en la Plaza de la Paja. ¿Por qué no seguir sus pasos?</p>
+  </div>
+</section>
 
   <section id="faqs" class="section">
     <br><br>
@@ -97,9 +116,9 @@
 
   <br><br>
   <h1>¿Qué me pongo? </h1>
-  <p>Codigo de vestimienta: tipo cóctel.</p>
+  <p>Recomendamos algo acorde a lo que normalmente se considera vestimenta de cóctel.</p>
 
-  <p><em>¿Qué significa tipo cóctel?<br></em>Nosotros también lo buscamos en Google, y esto es lo que entendimos:<p></p>   
+  <p><em><strong>¿Qué significa vestimenta de cóctel?</strong><br></em>Nosotros también lo buscamos en Google, y esto es lo que entendimos:<p></p>   
   <p>
     Es ese punto medio mágico entre ir elegante y no morir de calor ni incomodidad. 
     Ideal para bodas de día o al aire libre, como la nuestra. Básicamente: arréglate, pero no sufras.
@@ -134,6 +153,10 @@
     <div class="container">
       <h2>Noviquipo</h2>
       <h2>(Equipo de los novios)</h2>
+      <p>A lo largo de los años, hemos reunido amigos maravillosos provenientes de diferentes lugares y momentos de nuestras vidas; algunos muy cerca en el caso de Paula, y otros muy lejos en el caso de Austin.
+         Aun así, ya sean cercanos o lejanos, todos son especialmente cercanos a nuestros corazones y confiamos en ellos durante toda la celebración, no solo para dar algún discurso, sino también para ayudarnos a que todo salga perfecto. 
+         Lo mínimo que podemos hacer es presentártelos. Notarás que todos ellos son damas de honor y padrinos en plural. 
+         No podíamos clasificarlos, ya que cada uno nos ha ayudado de manera única que merece su propio reconocimiento.</p>
       <div class="party-grid">
         <div class="party-column">
           <h3>Damas de Honor</h3>
@@ -143,17 +166,45 @@
           <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p>Vero</p></div>
           <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p>Merche</p></div>
           <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p>Marina</p></div>
-          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p>Zoe</p></div>
+          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p>Zoë</p></div>
         </div>
         <div class="party-column">
           <h3>Padrinos</h3>
           <div class="party-item"><img src="images/bestmen/zack.jpeg" alt="Zack"/><p>Zack</p></div>
+          <p>Probablemente Zack sea la principal razón por la que estés aquí hoy.
+             No solo se convirtió en uno de nuestros mejores amigos en París, sino que además fue él quien presentó a Paula la oportunidad laboral que la llevaría desde Madrid a París, poniendo fin de la mejor manera posible a nuestra relación a distancia. 
+            Además de su ingenio, descubrirás que la empatía y el encanto de Zack siempre estarán ahí para ti.</p><br>
           <div class="party-item"><img src="images/bestmen/dimi.jpeg" alt="Dimi"/><p>Dimi</p></div>
+          <p>Ni se te ocurra… Ni pienses en cantar “here’s to brother Austin” el día de mi boda... 
+            Uno de mis mejores amigos y el más cercano, que siempre ha estado ahí apoyándome a mí y ahora también a Paula. 
+            Dimi y yo nos conocimos en la fraternidad Alpha Gamma Rho de la Universidad de Vermont, y hasta hoy es mejor que no nos dejen solos con nada más fuerte que cerveza.
+            Aunque si la boda deriva en cocina nocturna… probablemente tampoco deberían dejarnos cerca de la freidora.</p><br>
           <div class="party-item"><img src="images/bestmen/jamie.jpg" alt="Jamie"/><p>Jamie</p></div>
+          <p>No es frecuente que uno se una a una fraternidad y termine con una hermana como hermano, pero así es con Jamie, que siempre será para mí parte de Alpha Gamma Rho. 
+            Si Dimi me metía en problemas, Jamie siempre se ha asegurado de sacarme de ellos, o por lo menos de garantizar que llegara al día siguiente. 
+            Su energía y positivismo son contagiosos, y sus Long Island iced teas son peligrosos.
+             Siempre el alma de la fiesta; pregúntale además por lo que está leyendo, seguro te recomienda algo bueno.</p><br>
           <div class="party-item"><img src="images/bestmen/maxime.jpeg" alt="Maxime"/><p>Maxime</p></div>
+          <p>Hubo una época en la que solo éramos dos guiris en Madrid. Maxime se parece a Zack en una cosa: fue el primer amigo que hice a través de Reddit.
+             Durante nuestro tiempo en Madrid nos volvimos inseparables, y durante muchos fines de semana comimos y bebimos disfrutando de la capital. 
+             Qué días tan maravillosos. Desde entonces él se ha ido a Estados Unidos y yo he permanecido en Europa, pero sé que puedo contar con él, y él conmigo. 
+            ¿Se basa nuestra amistad también en un amor mutuo por el café? Es posible, pero así son las grandes amistades.</p><br>
           <div class="party-item"><img src="images/bestmen/alba.jpeg" alt="Alba"/><p>Alba</p></div>
+          <p> Alba es mi "Dimi española"… Nadie es más peligrosa a la hora de la fiesta. 
+            Aunque quiero pensar que me defiendo bien, en el fondo sé que ella siempre gana. 
+            Siempre presente y confiable, Alba fue parte esencial del famoso grupo de WhatsApp "cactus". Si sabes, sabes. 
+            Ahora viviendo en Berlín, ha venido para protegerme de los Long Island iced teas de Jamie, bebiéndoselos ella.</p><br>
           <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Guille"/><p>Guille</p></div>
+          <p> Aquí llegamos al momento en que presumo lo afortunado que soy. 
+            El hermano de Paula, Guille, ahora es también mío. Desde que nos conocemos, su generosidad y aceptación me han regalado otro hermano. 
+            Aunque en realidad, esto no sorprende a nadie que lo conozca a él o a la familia de la que proviene. No podría haber pedido una familia política más acogedora. 
+            Quien conoce a Guille a través de Beli y Alfonso sabe que así es la esencia de los Fidalgo Sánchez-Casas.
+             Me considero muy afortunado de tener a Guille como uno de mis padrinos.</p>
           <div class="party-item"><img src="images/bestmen/noah.jpeg" alt="Noah"/><p>Noah</p></div>
+          <p> No solo he tenido suerte una vez, sino dos.
+             Cuando Noah se casó con mi hermana, gané no uno, sino dos maravillosos cuñados.
+              Noah es alguien que resuelve cualquier situación sin complicarse por lo que sucede alrededor. 
+              Confiable y excepcional, me encanta lo bien que cuida de Zoë, y conociendo lo responsable que es, estoy tranquilo sabiendo que habrá alguien que evite que me caiga a la piscina la noche de la boda.</p>
         </div>
       </div>
     </div>
@@ -171,9 +222,11 @@
         </div>
         <div class="party-column">
           <div class="party-item">
-            <img src="images/bestmen/tim.jpeg" alt="Tim"/>
-            <p>Tim</p>
-          </div>
+            <img src="images/bestmen/tim.jpeg" alt="Tim"/><p>Tim</p></div>
+            <p>Tim iba a ser uno de mis padrinos, pero luego pensé que es el único capitán que conozco, así que mejor tenerlo como oficiante. 
+              Tim y yo nos conocemos desde cuando yo estaba realmente en forma… y corría por diversión, créelo o no. 
+              Desde los pasillos de University High School en Connecticut hasta Madrid, él siempre ha sido alguien en quien puedo confiar para animarme con increíbles aventuras que disfruto “vicariamente”. 
+              (Créeme que en inglés este juego de palabras es genial… porque normalmente quien te casa es un vicar).</p>
         </div>
       </div>
     </div>
