add austin bios

--- a/index_en.html
+++ b/index_en.html
@@ -234,16 +234,16 @@
             If Dimi got me in trouble then Jamie is the one who’s always gotten me out of it.
             At the very least she made sure I made it to the next day. 
             Her energy and positivity are infectious, and her long island iced teas are dangerous. 
-            Always the life of the part, ask her about what she’s reading too as she’ll always suggest something good. </p><br>
+            Always the life of the party, ask her about what she’s reading too as she’ll always suggest something good. </p><br>
           <div class="party-item"><img src="images/bestmen/maxime.jpeg" alt="Maxime"/><p>Maxime</p></div>
           <p>There was a time when we were just two Guiris in Madrid. Maxime is similar to Zack in one way, and that is that he’s the first friend I made through Reddit. 
             In our time in Madrid we became thick as thieves, and for a time almost every weekend eating and drinking our way through the capital. What wonderful days. 
-            Since then he’s gone to the US and I’ve stayed Europe bound, but to this I know I can count on him and vice versa.
+            Since then he’s gone to the US and I’ve stayed Europe bound, but I know I can count on him and vice versa.
             Is our friendship also founded on a mutual love of coffee? Possibly, but then that’s a good friend.</p><br>
           <div class="party-item"><img src="images/bestmen/alba.jpeg" alt="Alba"/><p>Alba</p></div>
           Alba is my Spanish Dimi… No one is more dangerous at party time. 
           Then again I’d like to think I’ve held my own but know deep down I haven’t. 
-          Always there and dependable, she formed to me an integral part of the famed “cactus” whatsapp group. 
+          Always there and dependable, was an integral part of the famed “cactus” whatsapp group. 
           If you know, you know. 
           Now based in Berlin, she’s here to protect me from Jamie’s long island iced teas by taking them for me.<br><br> 
           <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Guille"/><p>Guille</p></div>
