--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <br>
         <li><strong>Si tengo más preguntas, ¿a quién contacto? </strong><br>Puedes contactarnos por correo electrónico: paulayaustin @ gmail.com</li>
 
-  <br><br>
-  <h1>¿Qué me pongo? </h1>
+  <br>
+  <li><h1>¿Qué me pongo? </h1></li>
   <p>Recomendamos algo acorde a lo que normalmente se considera vestimenta de cóctel.</p>
 
   <p><em><strong>¿Qué significa vestimenta de cóctel?</strong><br></em>Nosotros también lo buscamos en Google, y esto es lo que entendimos:<p></p>   
@@ -160,51 +160,51 @@
       <div class="party-grid">
         <div class="party-column">
           <h3>Damas de Honor</h3>
-          <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p>Dani</p></div>
-          <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p>Laia</p></div>
-          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p>Natalie</p></div>
-          <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p>Vero</p></div>
-          <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p>Merche</p></div>
-          <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p>Marina</p></div>
-          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p>Zoë</p></div>
+          <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p style="text-align: center;">Dani</p></div>
+          <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p style="text-align: center;">Laia</p></div>
+          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p style="text-align: center;">Natalie</p></div>
+          <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p style="text-align: center;">Vero</p></div>
+          <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p style="text-align: center;">Merche</p></div>
+          <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p style="text-align: center;">Marina</p></div>
+          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p style="text-align: center;">Zoë</p></div>
         </div>
         <div class="party-column">
           <h3>Padrinos</h3>
-          <div class="party-item"><img src="images/bestmen/zack.jpeg" alt="Zack"/><p>Zack</p></div>
+          <div class="party-item"><img src="images/bestmen/zack.jpeg" alt="Zack"/><p style="text-align: center;">Zack</p>
           <p>Probablemente Zack sea la principal razón por la que estés aquí hoy.
              No solo se convirtió en uno de nuestros mejores amigos en París, sino que además fue él quien presentó a Paula la oportunidad laboral que la llevaría desde Madrid a París, poniendo fin de la mejor manera posible a nuestra relación a distancia. 
-            Además de su ingenio, descubrirás que la empatía y el encanto de Zack siempre estarán ahí para ti.</p><br>
-          <div class="party-item"><img src="images/bestmen/dimi.jpeg" alt="Dimi"/><p>Dimi</p></div>
+            Además de su ingenio, descubrirás que la empatía y el encanto de Zack siempre estarán ahí para ti.</p><br></div>
+          <div class="party-item"><img src="images/bestmen/dimi.jpeg" alt="Dimi"/><p style="text-align: center;">Dimi</p>
           <p>Ni se te ocurra… Ni pienses en cantar “here’s to brother Austin” el día de mi boda... 
             Uno de mis mejores amigos y el más cercano, que siempre ha estado ahí apoyándome a mí y ahora también a Paula. 
             Dimi y yo nos conocimos en la fraternidad Alpha Gamma Rho de la Universidad de Vermont, y hasta hoy es mejor que no nos dejen solos con nada más fuerte que cerveza.
-            Aunque si la boda deriva en cocina nocturna… probablemente tampoco deberían dejarnos cerca de la freidora.</p><br>
-          <div class="party-item"><img src="images/bestmen/jamie.jpg" alt="Jamie"/><p>Jamie</p></div>
+            Aunque si la boda deriva en cocina nocturna… probablemente tampoco deberían dejarnos cerca de la freidora.</p><br></div>
+          <div class="party-item"><img src="images/bestmen/jamie.jpg" alt="Jamie"/><p style="text-align: center;">Jamie</p>
           <p>No es frecuente que uno se una a una fraternidad y termine con una hermana como hermano, pero así es con Jamie, que siempre será para mí parte de Alpha Gamma Rho. 
             Si Dimi me metía en problemas, Jamie siempre se ha asegurado de sacarme de ellos, o por lo menos de garantizar que llegara al día siguiente. 
             Su energía y positivismo son contagiosos, y sus Long Island iced teas son peligrosos.
-             Siempre el alma de la fiesta; pregúntale además por lo que está leyendo, seguro te recomienda algo bueno.</p><br>
-          <div class="party-item"><img src="images/bestmen/maxime.jpeg" alt="Maxime"/><p>Maxime</p></div>
+             Siempre el alma de la fiesta; pregúntale además por lo que está leyendo, seguro te recomienda algo bueno.</p><br></div>
+          <div class="party-item"><img src="images/bestmen/maxime.jpeg" alt="Maxime"/><p style="text-align: center;">Maxime</p>
           <p>Hubo una época en la que solo éramos dos guiris en Madrid. Maxime se parece a Zack en una cosa: fue el primer amigo que hice a través de Reddit.
              Durante nuestro tiempo en Madrid nos volvimos inseparables, y durante muchos fines de semana comimos y bebimos disfrutando de la capital. 
              Qué días tan maravillosos. Desde entonces él se ha ido a Estados Unidos y yo he permanecido en Europa, pero sé que puedo contar con él, y él conmigo. 
-            ¿Se basa nuestra amistad también en un amor mutuo por el café? Es posible, pero así son las grandes amistades.</p><br>
-          <div class="party-item"><img src="images/bestmen/alba.jpeg" alt="Alba"/><p>Alba</p></div>
+            ¿Se basa nuestra amistad también en un amor mutuo por el café? Es posible, pero así son las grandes amistades.</p><br></div>
+          <div class="party-item"><img src="images/bestmen/alba.jpeg" alt="Alba"/><p style="text-align: center;">Alba</p>
           <p> Alba es mi "Dimi española"… Nadie es más peligrosa a la hora de la fiesta. 
             Aunque quiero pensar que me defiendo bien, en el fondo sé que ella siempre gana. 
             Siempre presente y confiable, Alba fue parte esencial del famoso grupo de WhatsApp "cactus". Si sabes, sabes. 
-            Ahora viviendo en Berlín, ha venido para protegerme de los Long Island iced teas de Jamie, bebiéndoselos ella.</p><br>
-          <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Guille"/><p>Guille</p></div>
+            Ahora viviendo en Berlín, ha venido para protegerme de los Long Island iced teas de Jamie, bebiéndoselos ella.</p><br></div>
+          <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Guille"/><p style="text-align: center;">Guille</p>
           <p> Aquí llegamos al momento en que presumo lo afortunado que soy. 
             El hermano de Paula, Guille, ahora es también mío. Desde que nos conocemos, su generosidad y aceptación me han regalado otro hermano. 
             Aunque en realidad, esto no sorprende a nadie que lo conozca a él o a la familia de la que proviene. No podría haber pedido una familia política más acogedora. 
             Quien conoce a Guille a través de Beli y Alfonso sabe que así es la esencia de los Fidalgo Sánchez-Casas.
-             Me considero muy afortunado de tener a Guille como uno de mis padrinos.</p>
-          <div class="party-item"><img src="images/bestmen/noah.jpeg" alt="Noah"/><p>Noah</p></div>
+             Me considero muy afortunado de tener a Guille como uno de mis padrinos.</p></div>
+          <div class="party-item"><img src="images/bestmen/noah.jpeg" alt="Noah"/><p style="text-align: center;">Noah</p>
           <p> No solo he tenido suerte una vez, sino dos.
              Cuando Noah se casó con mi hermana, gané no uno, sino dos maravillosos cuñados.
               Noah es alguien que resuelve cualquier situación sin complicarse por lo que sucede alrededor. 
-              Confiable y excepcional, me encanta lo bien que cuida de Zoë, y conociendo lo responsable que es, estoy tranquilo sabiendo que habrá alguien que evite que me caiga a la piscina la noche de la boda.</p>
+              Confiable y excepcional, me encanta lo bien que cuida de Zoë, y conociendo lo responsable que es, estoy tranquilo sabiendo que habrá alguien que evite que me caiga a la piscina la noche de la boda.</p></div>
         </div>
       </div>
     </div>
@@ -217,16 +217,17 @@
         <div class="party-column">
           <div class="party-item">
             <img src="images/damas/scott.jpeg" alt="Scott"/>
-            <p>Scott</p>
+            <p style="text-align: center;">Scott</p>
           </div>
         </div>
         <div class="party-column">
           <div class="party-item">
-            <img src="images/bestmen/tim.jpeg" alt="Tim"/><p>Tim</p></div>
+            <img src="images/bestmen/tim.jpeg" alt="Tim"/><p style="text-align: center;">Tim</p>
             <p>Tim iba a ser uno de mis padrinos, pero luego pensé que es el único capitán que conozco, así que mejor tenerlo como oficiante. 
               Tim y yo nos conocemos desde cuando yo estaba realmente en forma… y corría por diversión, créelo o no. 
-              Desde los pasillos de University High School en Connecticut hasta Madrid, él siempre ha sido alguien en quien puedo confiar para animarme con increíbles aventuras que disfruto “vicariamente”. 
+              Desde los pasillos de University High School en Connecticut hasta Madrid, él siempre ha sido alguien en quien puedo confiar para animarme con increíbles aventuras que disfruto <em>vicariamente</em>. 
               (Créeme que en inglés este juego de palabras es genial… porque normalmente quien te casa es un vicar).</p>
+            </div>
         </div>
       </div>
     </div>
