--- a/index.html
+++ b/index.html
@@ -112,10 +112,9 @@
         <br>
         <li><strong>¿Cuál es el menú? </strong><br>Aperitivos, paella (de tres tipos diferentes) y postre.</li>
         <br>
-        <li><strong>Si tengo más preguntas, ¿a quién contacto? </strong><br>Puedes contactarnos por correo electrónico: paulayaustin @ gmail.com</li>
-
+     
   <br>
-  <li><h1>¿Qué me pongo? </h1></li>
+  <li><h4>¿Qué me pongo? </h4></li>
   <p>Recomendamos algo acorde a lo que normalmente se considera vestimenta de cóctel.</p>
 
   <p><em><strong>¿Qué significa vestimenta de cóctel?</strong><br></em>Nosotros también lo buscamos en Google, y esto es lo que entendimos:<p></p>   
@@ -131,9 +130,13 @@
   <h3>Mujeres</h3>
   <p>Vestidos cortos, midi, largos… todo vale. También faldas, blusas o pantalones elegantes. Tacones si te gustan, pero si prefieres bailar sin dolor, unas sandalias monas también son perfectas. 
     Los accesorios mejor elegantes pero sin pasarse—no hace falta parecer que vas a los Goya.</p>
-    <br>
-    <p>En resumen: guap@s sí, pero cómod@s también.</p>
+    <p>En resumen: guap@s sí, pero cómod@s también.</p><br>
 
+  
+  <li><strong>Si tengo más preguntas, ¿a quién contacto? </strong><br>Puedes contactarnos por correo electrónico: paulayaustin @ gmail.com
+  <br><br><p>Nota: para usar realmente este correo electrónico, elimina los espacios.
+<br>El formato anterior solo evita que los bots nos envíen spam.</p></li>
+  
 
       </ul>
     </div>
