note for email added

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
   
   <li><strong>Si tengo más preguntas, ¿a quién contacto? </strong><br>Puedes contactarnos por correo electrónico: paulayaustin @ gmail.com
-  <br><br><p>Nota: para usar realmente este correo electrónico, elimina los espacios.
-<br>El formato anterior solo evita que los bots nos envíen spam.</p></li>
+  <br><br><p><em>Nota: cuando copies este correo electrónico, elimina los espacios.
+<br>El poner espacios evita que los bots nos envíen spam.</em></p></li>
   
 
       </ul>
@@ -163,13 +163,20 @@
       <div class="party-grid">
         <div class="party-column">
           <h3>Damas de Honor</h3>
-          <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p style="text-align: center;">Dani</p></div>
-          <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p style="text-align: center;">Laia</p></div>
-          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p style="text-align: center;">Natalie</p></div>
-          <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p style="text-align: center;">Vero</p></div>
-          <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p style="text-align: center;">Merche</p></div>
-          <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p style="text-align: center;">Marina</p></div>
-          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p style="text-align: center;">Zoë</p></div>
+          <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p style="text-align: center;">Dani</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p style="text-align: center;">Laia</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p style="text-align: center;">Natalie</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p style="text-align: center;">Vero</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p style="text-align: center;">Merche</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p style="text-align: center;">Marina</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p style="text-align: center;">Zoë</p>
+          <p></p></div>
         </div>
         <div class="party-column">
           <h3>Padrinos</h3>
