--- a/index_en.html
+++ b/index_en.html
@@ -214,13 +214,20 @@
       <div class="party-grid">
         <div class="party-column">
           <h3>Maids of Honor</h3>
-          <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p style="text-align: center;">Dani</p></div>
-          <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p style="text-align: center;">Laia</p></div>
-          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p style="text-align: center;">Natalie</p></div>
-          <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p style="text-align: center;">ero</p></div>
-          <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p style="text-align: center;">Merche</p></div>
-          <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p style="text-align: center;">Marina</p></div>
-          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p style="text-align: center;">Zoë</p></div>
+          <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p style="text-align: center;">Dani</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p style="text-align: center;">Laia</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p style="text-align: center;">Natalie</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p style="text-align: center;">ero</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p style="text-align: center;">Merche</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p style="text-align: center;">Marina</p>
+          <p></p></div>
+          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p style="text-align: center;">Zoë</p>
+          <p></p></div>
         </div>
         <div class="party-column">
           <h3>The Best Men</h3>
