--- a/index_en.html
+++ b/index_en.html
@@ -175,10 +175,9 @@
     <br>
   <p><strong>In brief: Dress to impress, but don’t stress.</strong><p>
   </p>
-  <h3>Men (Caballeros)</h3>
-  <br>
+  <h4>Men (Caballeros)</h4>
   <p>A suit works great, but a dress shirt with nice trousers and a blazer also does the trick. Ties or bowties? Totally optional—feel free to go bold with colors or patterns if you’re feeling festive. And yes, you can ditch the jacket once the dancing starts.</p>
-  <h3>Women (Damas)</h3>
+  <h4>Women (Damas)</h4>
   <p>Short, midi, or long dresses are all fair game. Skirts, blouses, or chic trousers? Absolutely. Heels are welcome (but not required—we love a comfy queen), and accessories should say <em>elegant guest</em>, not <em>I stole this from a red carpet.</em></p>
   
    <li><strong>Still have questions?</strong><br>Feel free to email us at: paulayaustin @ gmail.com <br><br>
@@ -236,7 +235,7 @@
             He not only became one of our best friends in Paris, but also introduced Paula to the job which would bring her to Paris from Madrid, ending our long distance relationship in the best way possible. 
             In addition to his wit, you’ll find Zack’s empathy and charm will always be there for you. </p><br></div>
           <div class="party-item"><img src="images/bestmen/dimi.jpeg" alt="Dimi"/><p style="text-align: center;"></pstyle>Dimi</p>
-          <p>Don’t do it… Don’t you dare sing here’s to brother Austin on my wedding day… 
+          <p>Don’t do it… Don’t you dare sing <em>here’s to brother Austin</em> on my wedding day… 
             One of my best and closest friends who’s always been there to support me and now Paula. 
             Dimi and I met at the Alpha Gamma Rho fraternity at the University of Vermont, and to this day you should not leave us alone with anything stronger than beer. 
             If the wedding turns to late night cooking though… you probably should not let either of us near the fryer. </p><br></div>
